examples/datalog/14_aggregations/40_nested_agg.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_nested_agg
Knowledge graph 'test_nested_agg' created.
Switched to knowledge graph: test_nested_agg
> .kg use test_nested_agg
Switched to knowledge graph: test_nested_agg
> +sales[(1, "North", "Q1", 100), (2, "North", "Q2", 150), (3, "South", "Q1", 200), (4, "South", "Q2", 250)].
Inserted 4 fact(s) into 'sales'.
> +regional_sum(Region, <SUM:Amount>) :- sales(_, Region, _, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
